# cpp_boilerplate

./: .gitignore  CMakeLists.txt  README.md  runner  runner.sh
app/: main.cpp
configs/: c_cpp_properties.json  settings.json
inc/: lat1.h
src/: lat1.cpp
